# Cowcord

./: .gitignore  .rustfmt.toml  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  index.html  tailwind.config.js
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-improvement-request.md
.github/workflows/: beta.yml  ci.yml  deploy.yml  i_hate_emojis.yml  release.yml
assets/: Cowcord-0230969c1b11ef76.js  Cowcord-0230969c1b11ef76.js.br  Cowcord-2fb578e6ba591626.js  Cowcord-2fb578e6ba591626.js.br  Cowcord-3fced8696d77f57f.js  Cowcord-3fced8696d77f57f.js.br  Cowcord-46681dba073688ed.js  Cowcord-46681dba073688ed.js.br  Cowcord-4d7edfdfd1df5860.js  Cowcord-4d7edfdfd1df5860.js.br  Cowcord-54f37fbcef006815.js  Cowcord-54f37fbcef006815.js.br  Cowcord-73af1e68561cc7be.js  Cowcord-73af1e68561cc7be.js.br  Cowcord-80732917b6dff7ee.js  Cowcord-80732917b6dff7ee.js.br  Cowcord-a5402d4354603b14.js  Cowcord-a5402d4354603b14.js.br  Cowcord-a645c98e8f8424ea.js  Cowcord-d0291f0f6d65adbe.js  Cowcord-d0291f0f6d65adbe.js.br  Cowcord-d8702296061e81b9.js  Cowcord-db69f370a2ca329f.js  Cowcord-db69f370a2ca329f.js.br  Cowcord-ddb8da3006a5a729.js  Cowcord-ddb8da3006a5a729.js.br  Cowcord-e4b76ce73ff9a1ed.js  Cowcord-e4b76ce73ff9a1ed.js.br  Cowcord-ed3698a299c90530.js  Cowcord_bg-02715b18b2a26a00.wasm  Cowcord_bg-02715b18b2a26a00.wasm.br  Cowcord_bg-156e652813ab8f21.wasm  Cowcord_bg-156e652813ab8f21.wasm.br  Cowcord_bg-236050d6f038c4c6.wasm  Cowcord_bg-236050d6f038c4c6.wasm.br  Cowcord_bg-3559d48a8fbc433d.wasm  Cowcord_bg-3b0884c8aac8935c.wasm  Cowcord_bg-3b0884c8aac8935c.wasm.br  Cowcord_bg-3d67434d2fe17453.wasm  Cowcord_bg-3d67434d2fe17453.wasm.br  (+28 more)
src/: main.rs
src/backend/: deprecated.txt  mod.rs
src/backend/auth/: login.rs  signup.rs
src/backend/websocket/: websocket.rs
src/components/: chat.rs  mod.rs  server_list.rs  status.rs
src/components/direct_messages/: user_profile.rs
src/components/modals/: mfa_code.rs  mod.rs
src/models/: app.rs  audit_log.rs  auto_moderation.rs  channel.rs  chat.rs  directory.rs  discovery.rs  emoji.rs  gateway_events.rs  guild.rs  guild_scheduled_event.rs  guild_template.rs  invite.rs  locales.rs  mfa.rs  mod.rs  premium_referral.rs  presence.rs  quest.rs  relationship.rs  stage_instance.rs  sticker.rs  team.rs  types.rs  user.rs  user_settings.rs  user_settings_proto.proto  voice.rs  webhook.rs  websocket.rs
src/models/auth/: login.rs
src/models/data/: application.rs  audit_log.rs  auto_moderation.rs  channel.rs  clan.rs  directory.rs  discovery.rs  emoji.rs  family_center.rs  gateway_events.rs  guild.rs  guild_scheduled_event.rs  guild_templates.rs  integration.rs  invite.rs  message.rs  mod.rs  premium_referral.rs  presence.rs  quest.rs  relationship.rs  soundboard.rs  stage_instance.rs  sticker.rs  team.rs  types.rs  user.rs  user_settings.rs  voice.rs  webhook.rs
src/models/endpoints/: application.rs  audit_log.rs  auth.rs  auto_moderation.rs  channel.rs  clan.rs  directory.rs  discovery.rs  emoji.rs  family_center.rs  guild.rs  guild_template.rs  mod.rs
src/models/http/: websocket.rs
src/models/types/: cdn_uri.rs  mod.rs  snowflake.rs  timestamp.rs
src/models/user/: settings.rs  user.rs
src/utils/: local_storage.rs  macros.rs  mod.rs  request.rs
src/views/: app.rs  home.rs  login.rs  mod.rs  not_found.rs
src/views/auth/: login.rs  mod.rs  register.rs
src/views/chats/: mod.rs
src/views/chats/server/: server.rs
src/views/server/: server.rs
(+5 files in other folders)
