[package]
name = "Cowcord"
version = "0.0.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.6.3", features = ["router"] }
gloo-timers = "0.3.0"
iso8601-timestamp = "0.3.3"
js-sys = "0.3.77"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Element",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "ErrorEvent",
    "CloseEvent",
    "console",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.beta]
inherits = "release"
opt-level = 3
build-std = ["std", "panic_abort", "core", "alloc"]
build-std-features = ["panic_immediate_abort"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
